# rust-practice

./: .gitignore  Cargo.toml
src/: main.rs
